<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_BCD_Cfg" Id="{9268985c-684f-45d4-b633-891ef512732c}">
    <Declaration><![CDATA[TYPE T_BCD_Cfg :
STRUCT
	bolSimulation: BOOL;
	strSensorIPAdr: STRING(15) := '';
	udiSensorPort: UDINT := 0;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>