<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_DRV" Id="{07da16fd-3a67-480c-b261-60d0823538be}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_DRV :
STRUCT
	///configuration
	Cfg: T_Ctrl_SIf_DRV_Cfg;
	///parameter
	Par: T_Ctrl_SIf_DRV_Par;
	///current values
	Cur: T_Ctrl_SIf_DRV_Cur;
	///io input
	In: T_Ctrl_SIf_DRV_In;
	///io output
	Out: T_Ctrl_SIf_DRV_Out;
	///alarm number used in this controller
	Alm: ARRAY[1..4] OF T_Ctrl_Alm;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>