<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_DRV_In" Id="{8d2c0f12-d65c-41e5-b086-bb2be4052a91}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_DRV_In :
STRUCT
	bolOverload: T_Ctrl_IoBool;
	bolPulse: T_Ctrl_IoBool;
	a_bolBlockedSupvervis: ARRAY[1..cMAX_BLOCKED_SUP] OF BASE_PLC.T_Ctrl_IoBool;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>